--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "review",
   "version": "0.1.0",
   "private": true,
+  "main": "./server/server",
+  "proxy": "http://localhost:3030",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
